<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.completemesh.qwala.controls"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Light"
        android:textSize="30sp"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="87dp"
        app:layout_constraintBottom_toBottomOf="@+id/toogleBtnLight"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ToggleButton
        android:id="@+id/toogleBtnLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/togglebutton"
        android:textOff="@string/off"
        android:textOn="@string/on"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/toogleBtnFan"
        android:layout_marginTop="72dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/toogleBtnFan"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <ToggleButton
        android:id="@+id/toogleBtnFan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/togglebutton2"
        android:textOff="OFF"
        android:textOn="ON"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="83dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@+id/toogleBtnLight" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fan"
        android:textSize="30sp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="7dp"
        android:layout_marginTop="57dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView3" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button"
        app:layout_constraintRight_toLeftOf="@+id/toogleBtnFan"
        tools:layout_constraintRight_creator="1"

        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="-47dp"
        app:layout_constraintTop_toBottomOf="@+id/toogleBtnFan"
        android:layout_marginRight="259dp" />


</android.support.constraint.ConstraintLayout>
